// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders selected card 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="card card--selected"
>
    <svg
        className="card__indicator"
        viewBox="0 0 100 100"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
    >
        <g>
            <path
                d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
            />
            <polygon
                points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
            />
        </g>
    </svg>
    <div>
        <h1
            className="card__label"
        >
            name
        </h1>
        <div
            className="card__attributes"
        >
            <h5
                className="card__attribute"
            >
                age
                : 
                33
            </h5>
            <h5
                className="card__attribute"
            >
                fullname
                : 
                full name
            </h5>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className="card card--selected"
>
      <svg
            className="card__indicator"
            viewBox="0 0 100 100"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
      >
            <g>
                  <path
                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                  />
                  <polygon
                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                  />
            </g>
      </svg>
      <div>
            <h1
                  className="card__label"
            >
                  name
            </h1>
            <div
                  className="card__attributes"
            >
                  <h5
                        className="card__attribute"
                  >
                        age
                        : 
                        33
                  </h5>
                  <h5
                        className="card__attribute"
                  >
                        fullname
                        : 
                        full name
                  </h5>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Card
        details={
                Array [
                        Object {
                          "age": "33",
                        },
                        Object {
                          "fullname": "full name",
                        },
                      ]
        }
        label="name"
        selected={true}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "details": Array [
            Object {
              "age": "33",
            },
            Object {
              "fullname": "full name",
            },
          ],
          "label": "name",
          "selected": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="card card--selected"
>
          <svg
                    className="card__indicator"
                    viewBox="0 0 100 100"
                    x="0px"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0px"
          >
                    <g>
                              <path
                                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                              />
                              <polygon
                                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                              />
                    </g>
          </svg>
          <div>
                    <h1
                              className="card__label"
                    >
                              name
                    </h1>
                    <div
                              className="card__attributes"
                    >
                              <h5
                                        className="card__attribute"
                              >
                                        age
                                        : 
                                        33
                              </h5>
                              <h5
                                        className="card__attribute"
                              >
                                        fullname
                                        : 
                                        full name
                              </h5>
                    </div>
          </div>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="card card--selected"
>
          <svg
                    className="card__indicator"
                    viewBox="0 0 100 100"
                    x="0px"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0px"
          >
                    <g>
                              <path
                                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                              />
                              <polygon
                                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                              />
                    </g>
          </svg>
          <div>
                    <h1
                              className="card__label"
                    >
                              name
                    </h1>
                    <div
                              className="card__attributes"
                    >
                              <h5
                                        className="card__attribute"
                              >
                                        age
                                        : 
                                        33
                              </h5>
                              <h5
                                        className="card__attribute"
                              >
                                        fullname
                                        : 
                                        full name
                              </h5>
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Card
    details={
        Array [
            Object {
              "age": "33",
            },
            Object {
              "fullname": "full name",
            },
          ]
    }
    label="name"
    selected={true}
/>,
}
`;

exports[`Card component renders unselected card 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="card"
>
    <svg
        className="card__indicator"
        viewBox="0 0 100 100"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
    >
        <g>
            <path
                d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
            />
            <polygon
                points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
            />
        </g>
    </svg>
    <div>
        <h1
            className="card__label"
        >
            name
        </h1>
        <div
            className="card__attributes"
        >
            <h5
                className="card__attribute"
            >
                age
                : 
                33
            </h5>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className="card"
>
      <svg
            className="card__indicator"
            viewBox="0 0 100 100"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
      >
            <g>
                  <path
                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                  />
                  <polygon
                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                  />
            </g>
      </svg>
      <div>
            <h1
                  className="card__label"
            >
                  name
            </h1>
            <div
                  className="card__attributes"
            >
                  <h5
                        className="card__attribute"
                  >
                        age
                        : 
                        33
                  </h5>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Card
        details={
                Array [
                        Object {
                          "age": "33",
                        },
                      ]
        }
        label="name"
        selected={false}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "details": Array [
            Object {
              "age": "33",
            },
          ],
          "label": "name",
          "selected": false,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="card"
>
          <svg
                    className="card__indicator"
                    viewBox="0 0 100 100"
                    x="0px"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0px"
          >
                    <g>
                              <path
                                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                              />
                              <polygon
                                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                              />
                    </g>
          </svg>
          <div>
                    <h1
                              className="card__label"
                    >
                              name
                    </h1>
                    <div
                              className="card__attributes"
                    >
                              <h5
                                        className="card__attribute"
                              >
                                        age
                                        : 
                                        33
                              </h5>
                    </div>
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="card"
>
          <svg
                    className="card__indicator"
                    viewBox="0 0 100 100"
                    x="0px"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0px"
          >
                    <g>
                              <path
                                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                              />
                              <polygon
                                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                              />
                    </g>
          </svg>
          <div>
                    <h1
                              className="card__label"
                    >
                              name
                    </h1>
                    <div
                              className="card__attributes"
                    >
                              <h5
                                        className="card__attribute"
                              >
                                        age
                                        : 
                                        33
                              </h5>
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Card
    details={
        Array [
            Object {
              "age": "33",
            },
          ]
    }
    label="name"
    selected={false}
/>,
}
`;
